--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>YmkeVandebroek | Presentatie</title>
+		<title>YmkeVandebroek_Hobby's</title>
 		<link rel="stylesheet" href="reveal.css">
 		<link rel="stylesheet" href="reset_plus.css">
 		<link rel="stylesheet" href="stijl.css">
